[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dashmap.workspace = true
rand.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
parking_lot.workspace = true
regex = "1.10"
twox-hash = "1.6"
crossbeam = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "gateway"
path = "src/main.rs"
